--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-DATABASE_URL=postgres://postgres:${POSTGRES_PASSWORD}@db/postgres
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db/postgres
