add rustup rustfmt component in container for development

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
 FROM rust:1-bullseye
 
 # Install additional software on dev container
-RUN cargo install diesel_cli --no-default-features --features postgres
+RUN cargo install diesel_cli --no-default-features --features postgres && \
+  rustup component add rustfmt
