--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-diesel = { version = "2.2.1", features = ["postgres"] }
-sha2 = "0.10.8"
+diesel = { version = "2.2", features = ["postgres"] }
+sha2 = "0.10"
 actix-web = "4"
+actix-files = "0.6"
