--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-diesel = { version = "2.2", features = ["postgres"] }
+diesel = { version = "2.2", features = ["postgres", "r2d2"] }
 sha2 = "0.10"
 actix-web = "4"
 actix-files = "0.6"
